Ajustes para funcionamento com Linux, output dos comandos e stacktraces.